<resources>
    <string name="app_name">RoomWordsSample</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="welcome_txt">Welcome to RoomPOC</string>
    <string name="create_account">Create account instead</string>
</resources>
