<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context=".UserLoginActivity">

    <!--<include layout="@layout/content_main" />-->

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:layout_margin="16dp"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:clickable="true"
                  android:focusable="true"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:layout_marginBottom="50dp"
                  android:text="@string/welcome_txt"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:importantForAutofill="no"
                  android:hint="@string/username"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:inputType="textPassword"
                  android:hint="@string/password"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:textColor="@color/blue_txt"
                  android:gravity="start"
                  android:clickable="true"
                  android:focusable="true"
                  android:onClick="startSignUp"
                  android:text="@string/create_account"/>

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:background="#000000"
                app:srcCompat="@android:drawable/ic_media_ff"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>